Update logo and movie image source in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- ================= NAVBAR ================= -->
   <header class="navbar">
-  <div class="logo">BookMyShow</div>
+  <div class="logo">Book-It</div>
 
   <!-- Search Bar -->
   <div class="search-container">
@@ -54,7 +54,7 @@
     <h2>Now Showing</h2>
     <div class="movie-grid">
       <div class="movie-card">
-        <img src="./assets/predator-badlands-et00443704-1762407465.avif" alt="Movie 1">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7KWcS46bsJ8uvdZ4ZTMvid0woEpJ5H1cVHQ&s" alt="Movie 1">
         <h3>predator-badlands</h3>
         <button class="book-btn">Book Now</button>
       </div>
