Update movie images to use external sources

--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
         <button class="book-btn">Book Now</button>
       </div>
       <div class="movie-card">
-        <img src="./assets/jatadhara-et00437572-1759050212.avif" alt="Movie 2">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJ_y1Lrm4aWE5RLqP4lyRjqBcR_yMLxzNUiA&s" alt="Movie 2">
         <h3>Jatadhara</h3>
         <button class="book-btn">Book Now</button>
       </div>
       <div class="movie-card">
-        <img src="./assets/pathan_img.jpg" alt="Movie 3">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTi7Jj1HSHylgbNkDcX-rdKp9G7UOXGUUSt2w&s" alt="Movie 3">
         <h3>Pathan</h3>
         <button class="book-btn">Book Now</button>
       </div>
       <div class="movie-card">
-        <img src="./assets/haq-et00464000-1762332432.jpg" alt="Movie 4">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXljQEo6owezhVWReu5Ns4tCs9mwU9qWs2eg&s" alt="Movie 4">
         <h3>Haq</h3>
         <button class="book-btn">Book Now</button>
       </div>
