fixed filter dropdown

--- a/movies.html
+++ b/movies.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Movies - BookMyShow Clone</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -139,7 +139,6 @@
     <p>© 2025 BookMyShow Clone | Designed by You</p>
   </footer>
 
-  <script src="script.js"></script>
   <script src="movies.js"></script>
 </body>
 </html>
